--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     align-items: center;
 }
 
-#add-new-button{
+#add-new-button, #remove-expired{
     height: 2rem;
     width: 7rem;
     padding: 0.5rem;
@@ -12,6 +12,11 @@ body{
     border-radius: 5px;
     color: #f0f0f0;
     background-color: #008cba;
+}
+
+#remove-expired{
+    height: 3rem;
+    width: 7rem;
 }
 
 #event-form{
